# ChangeLog for dev-java/guice
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Sep 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  +files/build_xml.patch, +metadata.xml, +guice-1.0.ebuild:
  Initial ebuild, compiles but has work to be done still.
