@@ -1,5 +1,5 @@
 AUX build_xml.patch 673 RMD160 5aa929528ebc1fdcc0c9c2ea11bcd5f3f6f685e7 SHA1 49ae2f46a192de663ad8ad067c2c0e26aba5cd08 SHA256 0a681d933c922949422a4b6b88f1a363d590c8c82148ce1ecea611f87cd14b03
 DIST guice-1.0-src.zip 15805092 RMD160 cf1c2273a3af46d18a06cb7b970a9a65394f4f9c SHA1 266d51aa90666cf2e1a3bd00c7dd55f11687e21a SHA256 1225a03dfd8ff03d9eeb77116a52d7d9cfd0f716267d36f124c2ff1ae0402693
-EBUILD guice-1.0.ebuild 2204 RMD160 ce41f9d571742a6d02978dcdcd93d4c4f3ddc380 SHA1 6a025eceaf6a5c9cc25ae407ef161d48bc797348 SHA256 a4fa45763aef6045158e22456c1ce7947a0d1d61a1ccc4946e0051738c71c210
+EBUILD guice-1.0.ebuild 2334 RMD160 74e6087a90dc586269cd927d95c9d72299e1ba61 SHA1 0e3e64de543582d9ec3cb63dd76e1ed31602e1a7 SHA256 f4043748d74688a075c27a40e5d15854b846f62ba0864e590552b965d8d8fd4f
 MISC ChangeLog 291 RMD160 acba17b6c51232ad2925980bbbade942d2f307c8 SHA1 167f22a58cd89682963fbd54aa229350636061a3 SHA256 045f3729b27802bc51d178af6b27aeb3d3d80bd1e8426f3810911c891782b1ab
 MISC metadata.xml 406 RMD160 067a58a51d51509a8e333f594bcdd8a7faab7035 SHA1 1079c061b3694d172dac7a507b5f9d24f0e5d164 SHA256 3108273434655a0e296d8ca732279c9230a3e096009fb2a91e8619d0bd9f5c5b
