@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Sep 2007; William L. Thomson Jr. <wltjr@gentoo.org> guice-1.0.ebuild:
+  Additional improvements, had to require virtual/j**-1.5.0 dep to get 1.5
+  bytecode? Bug in Java system?. Ebuild is close to being ready for tree.
+  Limewire compiles against it :) tests seem happy.
+
   09 Sep 2007; William L. Thomson Jr. <wltjr@gentoo.org>
   +files/build_xml.patch, +metadata.xml, +guice-1.0.ebuild:
   Initial ebuild, compiles but has work to be done still.
